Add some single-threaded benchmarks